sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:2: error: unclosed character literal
def solve() { print 'ta la haine'
                                ^DutchFlagAlgo:2: error: ';' expected but symbol literal found.
def solve() { print 'ta la haine'
                    ^